--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,10 +17,10 @@
                         Home
                     </a>
                     <a class="item" href="/about.html">
-                        About
+                        Acerca De
                     </a>
                     <a class="item" href="/archive.html">
-                        Archive
+                        Archivos
                     </a>
                     <div class="right menu">
                         <div id="head-search" class="ui category search item">
@@ -33,7 +33,7 @@
                         <a class="item" href="http://stallman.org/facebook.html">
                             <i class="facebook link icon"></i>
                         </a>
-                        <a class="item" href="https://github.com/abhn">
+                        <a class="item" href="https://github.com/kamplen3">
                             <i class="github link icon"></i>
                         </a>
                         <a class="item" href="/feed.xml">Subscribe</a>
