--- a/_includes/author.html
+++ b/_includes/author.html
@@ -3,12 +3,12 @@
     <div class="ui items">
         <div class="item">
             <a class="ui circular tiny image">
-                <img src="/assets/img/profile.jpg">
+                <img src="/assets/img/Perfil.png">
             </a>
             <div class="content">
-                <a class="header">Abhishek Nagekar</a>
+                <a class="header">Samuel Sáez</a>
                 <div class="description">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p></p>
                 </div>
             </div>
         </div>
