--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer-wrapper">
         <div class="ui secondary menu inverted">
-            <p class="item">Wall-E &copy; 2017</p>
+            <p class="item">Elden Ring &copy; 2025</p>
             <div class="right menu">
                 <a class="item" href="/archive.html">
                     Latest Posts
@@ -9,7 +9,7 @@
                 <a class="item" href="https://twitter.com/fsf">
                     Twitter
                 </a>
-                <a class="item" href="https://github.com/abhn">
+                <a class="item" href="https://github.com/kamplen3">
                     Github
                 </a>
             </div>
