--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
     <div class="ui divider"></div>
     {{ content }}
     <div class="ui horizontal divider">
-        Thank You For Reading
+        Gracias por leer
     </div>
     {% include author.html %}
     {% include disqus.html %}
