--- a/_includes/card.html
+++ b/_includes/card.html
@@ -35,7 +35,7 @@
         </a>
         {% if post.author %}
         <div class="right floated author">
-            <img class="ui avatar image" src="/assets/img/Perfil.png"> {{ post.author }}
+            <img class="ui avatar image" src="/assets/img/Perfil.png"> {{ Samuel Sáez }}
         </div>
         {% endif %}
     </div>
